
name:                clock
version:             0.1.0.0
synopsis:            hand watches firmware
-- description:
license:             BSD3
author:              hexo
maintainer:          zavinac@www.wwwbodkask.sk
copyright:           2017 hexo
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Clock.Platforms
                       Clock.LED
                       Clock.Blink
                       Clock.Types
                       Clock.Fonts
                       Clock.SSD1306
                       Clock.OledTest
                       --Clock.CANSendRecv
                       --Clock.CAN2UART
                       --Hello.App
                       --Hello.Platforms

  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32 >= 0.9,
                       ivory-bsp-stm32,
                       ivory-bsp-tests

  default-language:    Haskell2010
  ghc-options:         -Wall

executable oled-test-gen
  main-is:             SSD1306Test.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       clock
  ghc-options:          -Wall


executable blink-test-gen
  main-is:             BlinkTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       clock
  ghc-options:          -Wall

--executable cansendrecv-test-gen
--  main-is:             CANSendRecvTest.hs
--  hs-source-dirs:      test
--  build-depends:       base >= 4.6,
--                       ivory,
--                       ivory-stdlib,
--                       ivory-backend-c,
--                       ivory-hw,
--                       tower          >= 0.9,
--                       tower-config,
--                       tower-freertos-stm32,
--                       ivory-bsp-stm32,
--                       ivory-bsp-tests,
--                       clock
--  ghc-options:          -Wall
--
--executable can2uart-test-gen
--  main-is:             CAN2UARTTest.hs
--  hs-source-dirs:      test
--  build-depends:       base >= 4.6,
--                       ivory,
--                       ivory-stdlib,
--                       ivory-backend-c,
--                       ivory-hw,
--                       tower          >= 0.9,
--                       tower-config,
--                       tower-freertos-stm32,
--                       ivory-bsp-stm32,
--                       ivory-bsp-tests,
--                       clock
--  ghc-options:          -Wall
